clusters/production/apps/hasso/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasso
  namespace: prod
  labels:
    app: hasso
spec:
  type: ClusterIP
  selector:
    app: hasso
  ports:
    - { name: http, port: 80, targetPort: 8080, protocol: TCP }
